go/k8s/network/ingress/nginx/auth/client-certs/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: client-certs
  namespace: default
  annotations:
    # Enable client certificate authentication
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    # Create the secret containing the trusted ca certificates
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"
    # Specify the verification depth in the client certificates chain
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    # Specify an error page to be redirected to verification errors
    nginx.ingress.kubernetes.io/auth-tls-error-page: "http://lx1036.ingress-client-certs.server.com/error-cert.html"
    # Specify if certificates are passed to upstream server
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
spec:
  rules:
    - host: lx1036.ingress-client-certs.server.com
      http:
        paths:
          - backend:
              serviceName: service-affinity-cookie
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - lx1036.ingress-client-certs.server.com
      secretName: tls-secret
